--- a/postit/src/App.css
+++ b/postit/src/App.css
@@ -1,5 +1,15 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 1% 5%;
+}
+.data-div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .App-logo {
