feat:firebase auth added. feat: user details are shown using signed in user from firebase auth

--- a/postit/src/components/layout/SignedInLinks.css
+++ b/postit/src/components/layout/SignedInLinks.css
@@ -4,3 +4,15 @@
   justify-content: flex-start;
   text-align: left;
 }
+
+nav a {
+  color: black;
+}
+h5 {
+  margin-top: 0;
+  margin-bottom: 0;
+  /* border-left: 5px solid rgb(80, 139, 207); */
+}
+a {
+  padding: 8px 23px;
+}
