--- a/postit/src/components/postsContainer/postFunctions/PostList.css
+++ b/postit/src/components/postsContainer/postFunctions/PostList.css
@@ -12,3 +12,16 @@
 span {
   font-weight: bold;
 }
+h1 {
+  margin: 0 auto;
+}
+.list-profile-img {
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  margin: 0 8px 0 0;
+}
+.user {
+  display: flex;
+  align-items: center;
+}
