--- a/postit/src/components/postsContainer/postFunctions/PostList.css
+++ b/postit/src/components/postsContainer/postFunctions/PostList.css
@@ -4,7 +4,8 @@
   align-items: center;
   width: 100%;
   justify-content: space-between;
-  margin: 10px auto;
+  margin: 0 auto 10px auto;
+  padding-top: 0px;
 }
 .list-div {
   height: 150px;
