feat: user can upvote and downvote post indefinietly. the post's data is updated on firebase respective to the post on which the button was clicked

--- a/postit/src/components/postsContainer/postFunctions/PostList.css
+++ b/postit/src/components/postsContainer/postFunctions/PostList.css
@@ -32,8 +32,14 @@ h1 {
   display: flex;
   align-items: center;
 }
-.votes {
+.votes-container {
+  display: flex;
+  flex-direction: row;
   flex-grow: 1;
+}
+.votes-div {
+  display: flex;
+  flex-direction: row;
 }
 .post-type {
   width: 270px;
@@ -43,4 +49,8 @@ h1 {
 }
 .summary {
   text-align: left;
+}
+.vote-button {
+  display: flex;
+  flex-direction: row;
 }
