--- a/postit/src/App.css
+++ b/postit/src/App.css
@@ -1,4 +1,9 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  margin: 1% 5%;
+}
+.app-data {
   text-align: center;
   display: flex;
   flex-direction: row;
