--- a/postit/src/components/layout/SignedInLinks.css
+++ b/postit/src/components/layout/SignedInLinks.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: flex-start;
   text-align: left;
+  width: 250px;
 }
 
 nav a {
@@ -14,5 +15,5 @@ h5 {
   /* border-left: 5px solid rgb(80, 139, 207); */
 }
 a {
-  padding: 8px 23px;
+  padding: 8px 10%;
 }
