--- a/postit/src/components/postsContainer/postFunctions/PostList.css
+++ b/postit/src/components/postsContainer/postFunctions/PostList.css
@@ -8,7 +8,7 @@
   padding-top: 0px;
 }
 .list-div {
-  height: 150px;
+  height: 155px;
 }
 .container {
   margin: 20px auto;
@@ -35,7 +35,10 @@ h1 {
 .votes-container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   flex-grow: 1;
+  text-align: center;
 }
 .votes-div {
   display: flex;
@@ -53,4 +56,7 @@ h1 {
 .vote-button {
   display: flex;
   flex-direction: row;
+}
+.number {
+  padding: 15px 0;
 }
